added Exp_Results stub; added overview to Prior Work

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -161,3 +161,19 @@ doi = {10.1002/rob.21581},
 pages = {431--450},
 year = {2016},
 }
+
+@proceeding{Donavanik2016,
+author = {Donavanik, Daniel and Hardt-Stremayr, Alexander and Gremillion, Gregory and Weiss, Stephan and Nothwang, William},
+title = {{Multi-Sensor Fusion Techniques for State Estimation of Micro Air Vehicles}},
+journal = {Proc. SPIE},
+volume = {9836},
+number = {},
+pages = {98361V-98361V-16},
+abstract = {
+Aggressive flight of micro air vehicles (MAVs) in unstructured, GPS-denied environments poses unique challenges for estimation of vehicle pose and velocity due to the noise, delay, and drift in individual sensor measurements. Maneuvering flight at speeds in excess of 5 m/s poses additional challenges even for active range sensors; in the case of LIDAR, an assembled scan of the vehicles environment will in most cases be obsolete by the time it is processed. Multi-sensor fusion techniques which combine inertial measurements with passive vision techniques and/or LIDAR have achieved breakthroughs in the ability to maintain accurate state estimates without the use of external positioning sensors. In this paper, we survey algorithmic approaches to exploiting sensors with a wide range of nonlinear dynamics using filter and bundle-adjustment based approaches for state estimation and optimal control. From this foundation, we propose a biologically-inspired framework for incorporating the human operator in the loop as a privileged sensor in a combined human/autonomy paradigm.
+},
+year = {2016},
+doi = {10.1117/12.2224162},
+URL = { http://dx.doi.org/10.1117/12.2224162},
+eprint = {}
+}
