--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 \documentclass[11 pt]{report}
 
-\usepackage{geometry}
-\geometry{letterpaper, top=1.25in, bottom=1.25in, left=1.5in, right=1.5in}
+\usepackage{geometry} % DELETE WHEN FINISHED
+\geometry{letterpaper, top=1.25in, bottom=1.25in, left=1.5in, right=1.5in} % DELETE WHEN FINISHED
 
 \usepackage{graphicx}
 \usepackage{microtype}
@@ -18,7 +18,8 @@
 
 \usepackage{todonotes} % DELETE WHEN FINISHED
 
-\linespread{1.6}
+\linespread{1.6} % Double-space for initial drafts
+%\linespread{1.15} % Better line spacing for final copy
 
 \hypersetup{
     pdffitwindow=false,     % window fit to page when opened
@@ -44,33 +45,23 @@
 
 \maketitle
 
-\pagenumbering{roman}
+\pagenumbering{roman} % Roman numeral pagination in all front matter up to the List of Figures
 
 \input{Abstract.tex}
-
 \input{Acknowledgements.tex}
 
 \tableofcontents
-
 %\listoftables % DELETE IF UNUSED
-
 \listoffigures
 
 \input{Acronyms.tex}
-\pagenumbering{arabic}
-
+\pagenumbering{arabic} % Starts arabic pagination in Acronyms chapter.
 \input{Introduction.tex}
-
 \input{Prior_Work.tex}
-
 \input{Alg_Design.tex}
-
 \input{Exp_Design.tex}
-
-%\chapter{Experimental Results}
-
+\input{Exp_Results.tex}
 \input{Conclusions.tex}
-
 \input{Future_Work.tex}
 
 \clearpage
