--- a/main.tex
+++ b/main.tex
@@ -15,6 +15,7 @@
 \usepackage[margin=0.1\textwidth]{caption}
 \usepackage{subcaption}
 \usepackage{wrapfig}
+\usepackage{bm}
 
 \usepackage{todonotes} % DELETE WHEN FINISHED
 
@@ -35,6 +36,7 @@
 }
 
 \begin{document}
+
 \title{
 	{A Hardware-Minimal Unscented Kalman Filtering Framework for Visual-Inertial Navigation of \\ Small Unmanned Aircraft}\\
 	\vspace{1 em}
@@ -42,14 +44,11 @@
 }
 \author{Joshua Galen Eddy}
 \date{April 20, 2017}
-
 \maketitle
 
 \pagenumbering{roman} % Roman numeral pagination in all front matter up to the List of Figures
-
 \input{Abstract.tex}
 \input{Acknowledgements.tex}
-
 \tableofcontents
 %\listoftables % DELETE IF UNUSED
 \listoffigures
@@ -71,5 +70,6 @@
 
 %\appendix
 % http://tex.stackexchange.com/questions/49643/making-appendix-for-thesis
+%\input{Code_Listing.tex}
 
 \end{document}
