--- a/Exp_Design.tex
+++ b/Exp_Design.tex
@@ -2,7 +2,7 @@
 
 \section{Testing Considerations}
 
-Before venturing further, we should summarize the goals of the UKF framework described previously, paying particular attention to unmanned aircraft system (UAS) operations. This ROS package was designed with the express intent of producing estimates of the position vector $\mathbf{p}$ and orientation quaternion $\mathbf{q}$ of a rotorcraft UAV in real time. Thus, the experiments testing \texttt{kalman\_sense}'s efficacy compare the filter's estimates of position and orientation to the ground truth measured by Vicon.
+Before venturing further, we should summarize the goals of the UKF framework described previously, paying particular attention to unmanned aircraft system (UAS) operations. This ROS package was designed with the express intent of producing estimates of the position vector $\mathbf{p}$ and orientation quaternion $\mathbf{q}$ of a rotorcraft UAV in real time. Thus, the experiments testing the system's efficacy compare the filter's estimates of position and orientation to the ground truth measured by Vicon.
 
 \begin{figure}[t]
     \centering
@@ -21,14 +21,9 @@ Before venturing further, we should summarize the goals of the UKF framework des
     \label{fig:sensor_mount}
 \end{figure}
 
-This system depends upon two sensors: a global-shutter camera and an IMU. The IMU used in this experiment contains a 3-axis accelerometer and 3-axis gyroscope. To simulate both sensors moving through the scene in a manner reminiscent of hovering rotorcraft flight, a rolling test stand was constructed to carry the sensors safely throughout a large motion capture environment. Mounting the sensor suite on a large, steady, level platform allows for a high degree of control over the accelerations and angular velocities felt by the IMU, as well as the motion seen by the ventral camera. In order to validate the UKF framework's effectiveness under ideal conditions, a modern laptop computer with an Intel i7 processor and 16~GB of RAM was used for all computations. The floor of the motion capture environment was strewn with a mixture of April tags and modified Quick Response\footnote{\url{https://en.wikipedia.org/wiki/QR_code}} (QR) codes in order to provide sufficient visual features for PTAM to track.
+This system depends upon two sensors: a single global-shutter camera and an IMU. The IMU used in this experiment contains a 3-axis accelerometer and 3-axis gyroscope. To simulate both sensors moving through the scene in a manner reminiscent of hovering rotorcraft flight, a rolling test stand was constructed to carry the sensors safely throughout a large motion capture environment. Mounting the sensor suite on a large, steady, level platform allows for a high degree of control over the accelerations and angular velocities felt by the IMU, as well as the motion seen by the ventral camera. In order to validate the UKF framework's effectiveness under ideal conditions, a modern laptop computer containing an Intel i7 processor with 16~GB of RAM was used for all computations. The floor of the motion capture environment was strewn with a mixture of April tags and modified Quick Response\footnote{\url{https://en.wikipedia.org/wiki/QR_code}} (QR) codes in order to provide sufficient visual features for PTAM to track.
 
-\begin{wrapfigure}{r}{0.5\textwidth}
-  \centering
-    \includegraphics[width=0.35\textwidth]{april_tag}
-  \caption[Example April tag]{Example of an April tag from the \texttt{apriltags\_ros} ROS package.}
-  \label{fig:april_tag}
-\end{wrapfigure}
+\clearpage
 
 \section{Materials}
 \subsection{Computation and Sensing}
@@ -38,6 +33,8 @@ This system depends upon two sensors: a global-shutter camera and an IMU. The IM
 \item One (1) Hewlett-Packard Spectre x360 Convertible Laptop 13-ac076nr\footnote{\url{http://store.hp.com/us/en/pdp/hp-spectre-x360---13-ac076nr}}
 \item Two (2) male Mini USB 2.0 to male USB Type A cables
 \end{enumerate}
+
+\clearpage
 
 \subsection{Mobile Test Stand}
 \begin{enumerate}
@@ -53,6 +50,7 @@ This system depends upon two sensors: a global-shutter camera and an IMU. The IM
 \item One (1) 0.7-meter Length of $\frac{1}{8}$"-thick Carbon Fiber Rod
 \end{enumerate}
 
+\clearpage
 
 \section{The Experiments}
 
