--- a/Exp_Results.tex
+++ b/Exp_Results.tex
@@ -1,3 +1,23 @@
 \chapter{Experimental Results}
 
-\todo{Get some results}
+%\begin{figure}
+%  \centering
+%    \includegraphics[width=0.5\textwidth]{box1_2d}
+%  \caption[Box Pattern Trial 1, 2D Trajectory]{The two-dimensional projection of the first box pattern trajectory.}
+%  \label{fig:box1_2d}
+%\end{figure}
+
+\begin{figure}[t]
+    \centering
+    \begin{subfigure}[t]{0.4\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{box1_2d}
+    \end{subfigure}%
+    ~ 
+    \begin{subfigure}[t]{0.6\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{box1_3d}
+    \end{subfigure}
+    \caption[Box Pattern Trial 1 Trajectory]{2D and 3D trajectory plots from Box Pattern Trial~1.}
+    \label{box1_traj}
+\end{figure}
