started Future Work, edited Alg Design

--- a/Acronyms.tex
+++ b/Acronyms.tex
@@ -16,4 +16,5 @@
 \item [UT] Unscented Transform
 \item [UTM] Unmanned Traffic Management
 \item [VIN] Visual-Inertial Navigation
+\item [VO] Visual Odometry
 \end{description}
