--- a/bibliography.bib
+++ b/bibliography.bib
@@ -189,7 +189,7 @@ doi={10.1109/ASSPCC.2000.882463},
 month={},}
 
 @ARTICLE{Mur-Artal2015, 
-author={R. Mur-Artal and J. M. M. Montiel and J. D. Tardós}, 
+author={R. Mur-Artal and J. M. M. Montiel and J. D. Tard{\'o}s}, 
 journal={IEEE Transactions on Robotics}, 
 title={{ORB-SLAM: A Versatile and Accurate Monocular SLAM System}}, 
 year={2015}, 
